# smolagents-plasmate

./: LICENSE  README.md  pyproject.toml
smolagents_plasmate/: __init__.py  tools.py
tests/: test_tools.py
